# igitt

./: CHANGELOG.md  README.md  flake.nix  igitt.cabal
.github/workflows/: ci.yml
app/: Bump.hs  Command.hs  Dirty.hs  Main.hs  New.hs  Params.hs  Prelude.hs  Push.hs  WorkingBranch.hs
